--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,10 +2,12 @@
 @import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css");
 /* 브라우저가 디폴트로 html에 적용시키는 스타일 없애주는 reset.css파일 추가 */
 @import "reset.css";
+@import "variables.css";
 /* style.css 파일에 다른 css 파일을 import하기
 css 코드를 여러 파일로 분할했다가 다시 합치는 것.
 특히 status-bar는 모든 화면에 상태바가 있기 때문에 분리함 */
 @import "status-bar.css";
+
 body {
   font-family: "Pretendard", sans-serif;
 }
@@ -29,4 +31,47 @@ body {
 .welcome-header__text {
   width: 60%;
   opacity: 0.7;
+}
+
+#login-form {
+  display: flex;
+  flex-direction: column;
+  margin: 0px 30px;
+}
+
+#login-form input {
+  border: none;
+  padding: 15px 0px;
+  font-size: 18px;
+  margin-bottom: 25px;
+}
+/* input type이 submit인 것을 제외하고 아래와 같은 성질 부여하기 
+attribute selector*/
+#login-form input:not([type="submit"]) {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  transition: border-color 0.3s ease-in-out;
+}
+
+#login-form input::placeholder {
+  color: rgba(0, 0, 0, 0.4);
+}
+
+#login-form input:focus {
+  border-color: var(--yellow);
+}
+
+#login-form input[type="submit"] {
+  background-color: var(--yellow);
+  cursor: pointer;
+  padding: 20px 0px;
+  border-radius: 5px;
+}
+
+#login-form a {
+  text-align: center;
+  /* link 부분에 밑줄 지우기 */
+  text-decoration: none;
+  /* link(a)의 default 색상 바꾸기 -> 부모(login-form)의 특성 상속받기 */
+  color: inherit;
+  font-size: 13px;
 }
