--- a/CSS/reset.css
+++ b/CSS/reset.css
@@ -354,3 +354,17 @@ template {
 input:focus {
   outline: none;
 }
+
+/* 리스트 아이템 초기화 */
+ul,
+ol {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+/* 링크 스타일 초기화 */
+a {
+  color: inherit;
+  text-decoration: none;
+}
