--- a/CSS/style.css
+++ b/CSS/style.css
@@ -9,12 +9,15 @@
 @import "components/status-bar.css";
 @import "components/nav-bar.css";
 @import "components/screen-header.css";
+@import "components/user-component.css";
 
 /*Screens */
 @import "screens/login.css";
+@import "screens/friends.css";
 
 /* style.css 파일에는 font-family나 backgroung-color같이
 모든 스크린에 적용될 수 있는 스타일을 쓰는게 좋음 */
 body {
+  color: #2e363e;
   font-family: "Pretendard", sans-serif;
 }
