--- a/CSS/variables.css
+++ b/CSS/variables.css
@@ -1,3 +1,6 @@
+/** 공통적으로 적용되는 특성에 사용해줄 변수 / 
+ex. padding : var(--variableName); 이렇게 쓰임 */
 :root {
   --yellow: #fae100;
+  --horizontal-space: 25px; /** 공통 padding 값 */
 }
