--- a/CSS/components/user-component.css
+++ b/CSS/components/user-component.css
@@ -46,5 +46,13 @@ user-component__column:first-child에는 사진과 text가 있고 그 둘에 적
 }
 
 .user-component__column:last-child {
-  color: rgba(0, 0, 0, 0.5);
+  color: rgba(0, 0, 0, 0.4);
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.user-component__time {
+  margin-bottom: 10px;
+  display: block;
 }
