--- a/CSS/style.css
+++ b/CSS/style.css
@@ -11,10 +11,12 @@
 @import "components/screen-header.css";
 @import "components/user-component.css";
 @import "components/badge.css";
+@import "components/update.css";
 
 /*Screens */
 @import "screens/login.css";
 @import "screens/friends.css";
+@import "screens/find.css";
 
 /* style.css 파일에는 font-family나 backgroung-color같이
 모든 스크린에 적용될 수 있는 스타일을 쓰는게 좋음 */
