--- a/CSS/style.css
+++ b/CSS/style.css
@@ -12,12 +12,14 @@
 @import "components/user-component.css";
 @import "components/badge.css";
 @import "components/icon-row.css";
+@import "components/alt-screen-header.css";
 
 /*Screens */
 @import "screens/login.css";
 @import "screens/friends.css";
 @import "screens/find.css";
 @import "screens/more.css";
+@import "screens/settings.css";
 
 /* style.css 파일에는 font-family나 backgroung-color같이
 모든 스크린에 적용될 수 있는 스타일을 쓰는게 좋음 */
