--- a/CSS/screens/settings.css
+++ b/CSS/screens/settings.css
@@ -1,13 +1,18 @@
-.settings-setting {
+.settings__setting {
   padding: 20px 0;
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-  font-size: 18px;
+  font-size: 22px;
   display: flex;
   align-items: center;
+  justify-content: space-between;
 }
 
-.settings-setting i {
+.settings__setting i {
   margin-right: 20px;
   font-size: 22px;
   opacity: 0.8;
+}
+
+.settings__setting-column:last-child {
+  opacity: 0.5;
 }
