--- a/CSS/style.css
+++ b/CSS/style.css
@@ -20,6 +20,7 @@
 @import "screens/find.css";
 @import "screens/more.css";
 @import "screens/settings.css";
+@import "screens/chat.css";
 
 /* style.css 파일에는 font-family나 backgroung-color같이
 모든 스크린에 적용될 수 있는 스타일을 쓰는게 좋음 */
