--- a/CSS/components/screen-header.css
+++ b/CSS/components/screen-header.css
@@ -15,3 +15,15 @@
   margin-left: 25px;
   position: relative;
 }
+
+@keyframes rotateGear {
+  from {
+    transform: none;
+  }
+  to {
+    transform: rotateZ(360deg);
+  }
+}
+.screen-header__icons .fa-gear:hover {
+  animation: rotateGear 1s linear infinite;
+}
