--- a/CSS/screens/find.css
+++ b/CSS/screens/find.css
@@ -106,3 +106,27 @@ open-post__members안에 있는 divider에만 적용해주기 */
 .open-post__heart-count span {
   margin-left: 3px;
 }
+
+@keyframes heartBeat {
+  0% {
+    color: white;
+    transform: none;
+  }
+  50% {
+    color: tomato;
+    transform: scale(1.5);
+  }
+  100% {
+    color: white;
+    transform: none;
+  }
+}
+
+/* open-post__heart-count의 어느 부분에 마우스를 갖다대도 
+icon에 호버했을 때만 애니메이션이 적용되게 */
+.open-post__heart-count:hover i {
+  /* animation이 불안정할 때 will-change를 사용하면 그래픽카드를 이용해
+  브라우저에서 애니메이션을 가속화하도록 도와줌 */
+  will-change: transform;
+  animation: heartBeat 1s linear infinite;
+}
